--- a/finimalism10.11-black.css
+++ b/finimalism10.11-black.css
@@ -295,9 +295,12 @@
 }
 
 .countIndicator, 
-.playedIndicator,
-.innerCardFooter {
+.playedIndicator {
   background: var(--accentBlack);
+}
+
+#scenesContent .innerCardFooter {
+    background: #000000bd !important;
 }
 
 .paper-icon-button-light:hover, .raised.homeLibraryButton:hover, .button-flat:hover, .playstatebutton-icon-played, .paper-icon-button-light:hover:not(:disabled), .emby-tab-button:hover, .selectLabelFocused, .inputLabelFocused, .textareaLabelFocused, .buttonActive, .button-link {
