--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -3783,6 +3783,10 @@ content: '';
   top: 32em;
 }
 
+.layout-desktop .card:hover .countIndicator {
+  opacity: 0;
+}
+
 /* 720p resolution */
 @media (max-width: 1280px) and (max-height: 720px) {
   .layout-desktop body, .layout-tv body {
