--- a/finimalism10.11-black.css
+++ b/finimalism10.11-black.css
@@ -532,3 +532,7 @@ color: #000;
   color: #ff6767;
   filter: drop-shadow(0px 0px 3px #f00);
 }
+
+.layout-desktop #itemDetailPage .listItem, .layout-tv #itemDetailPage .listItem {
+  background: #070707;
+}
