--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -3787,6 +3787,12 @@ content: '';
   opacity: 0;
 }
 
+.nowPlayingInfoContainerMedia {
+  margin-bottom: 1em;
+  text-align: left;
+  font-size: 1.3em;
+}
+
 /* 720p resolution */
 @media (max-width: 1280px) and (max-height: 720px) {
   .layout-desktop body, .layout-tv body {
