--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -667,6 +667,7 @@ progress::-webkit-progress-value {
 
 .layout-desktop .mainDetailButtons,
 .layout-tv .mainDetailButtons {
+  font-size: 1.08em;
 }
 
 .startTimeText, .endTimeText {
