--- a/finimalism10.11-black.css
+++ b/finimalism10.11-black.css
@@ -548,3 +548,19 @@ color: #000;
   box-shadow: 0px 2px 12px #000;
   background: #0d0d0dbd;
 }
+
+.layout-desktop .button-flat.btnPlay.detailButton.emby-button, 
+.layout-tv .button-flat.btnPlay.detailButton.emby-button {
+  width: 33.3333%;
+  height: 2em;
+  background: var(--accentBlack) !important;
+  box-shadow: 0px 0px 13px #8200007a;
+  margin-left: -0.9em !important;
+}
+
+.layout-desktop .button-flat.btnPlay.detailButton.emby-button:hover, 
+.layout-tv .button-flat.btnPlay.detailButton.emby-button:focus {
+  background: #fff !important;
+  box-shadow: 0px 0px 11px #ffffff70;
+  color: var(--accentBlack) !important;
+}
