--- a/finimalism10.11-black.css
+++ b/finimalism10.11-black.css
@@ -561,3 +561,25 @@ color: #000;
   box-shadow: 0px 0px 11px #ffffff70;
   color: var(--accentBlack) !important;
 }
+
+.layout-mobile .button-flat.btnPlay.detailButton.emby-button {
+  width: 22%;
+  height: 2em;
+  background: var(--accentBlack) !important;
+  box-shadow: 0px 0px 13px #432b6f7a;
+  margin-left: -0.9em !important;
+}
+
+.layout-mobile .button-flat.btnPlay.detailButton.emby-button:focus {
+  background: #fff !important;
+  box-shadow: 0px 0px 11px #ffffff70;
+  color: var(--accentBlack) !important;
+}
+
+.layout-mobile .button-flat.btnPlay.detailButton.emby-button .detailButton-content {
+  transform-origin: center;
+}
+
+.layout-mobile .button-flat.btnPlay.detailButton.emby-button:focus .detailButton-content {
+  transform: scale(1.25);
+}
